fix: collapse of the back button

--- a/src/components/Main/components/Board/Board.module.css
+++ b/src/components/Main/components/Board/Board.module.css
@@ -197,7 +197,7 @@
 .back {
   cursor: pointer;
 
-  width: 76px;
+  min-width: 76px;
   height: 76px;
 
   background-color: rgb(255 255 255 / 40%);
